--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="public/index.html" class="button">Login</a>
-        <a href="public/register.html" class="button">Register</a>
+        <a href="public/index.html" class="button">Press Me</a>
     </div>
 </body>
 </html>
