--- a/public/archive.html
+++ b/public/archive.html
@@ -11,9 +11,9 @@
     <!-- Include Chessboard.js CSS -->
     <link rel="stylesheet" href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css" integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU" crossorigin="anonymous">
     <style>
-        h1 {
+        h2 {
             text-align: center;
-            font-size: 3rem;
+            font-size: 2rem;
             color: #ecba13;
             text-shadow: 0 0 10px #fff;
             margin-top: 50px;
@@ -28,11 +28,6 @@
             height: 100vh;
             margin: 0;
         }
-
-        .container {
-            text-align: center;
-        }
-
         .plugin-section {
             margin-bottom: 20px;
             right: -120px;
@@ -40,13 +35,13 @@
         }
 
         .move-list-container {
-            height: 400px;
+            height: 500px;
             /* Adjust height as needed */
             overflow-y: auto;
             padding: 10px;
             position: relative;
-            right: -100px;
-            top: -30px;
+            right: -130px;
+            top: 50px;
         }
 
         .move-list {
@@ -65,14 +60,10 @@
         }
 
         .move-navigation {
-            top: 375px;
-            right: 295px;
+            top: 600px;
+            right: 250px;
             position: relative;
-        }
-
-        .loadGameBtn {
-            position: relative;
-            top: 20px;
+            padding: 5px;
         }
 
         .navigation-links {
