--- a/public/background.html
+++ b/public/background.html
@@ -14,7 +14,7 @@
       align-items: center;
       justify-content: flex-start;
       min-height: 100vh;
-      background: url('/backgrounds/default.jpg') no-repeat center center fixed;
+      background: url('/backgrounds/default.png') no-repeat center center fixed;
       background-size: cover;
     }
     h1 {
