--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,10 @@
           <label for="registerPassword">Password</label>
           <input type="password" class="form-control" id="registerPassword" name="password" required>
         </div>
+        <div class="form-group">
+          <label for="registerSchool">School</label>
+          <input type="school" class="form-control" id="registerSchool" name="school" required>
+        </div>
         <button type="submit" class="registerbtn">Register</button>
         <div id="registerMessage" class="message"></div>
       </form>
