--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="form-group">
           <label for="registerSchool">School</label>
-          <input type="school" class="form-control" id="registerSchool" name="school" required>
+          <input type="text" class="form-control" id="registerSchool" name="school" required>
         </div>
         <button type="submit" class="registerbtn">Register</button>
         <div id="registerMessage" class="message"></div>
@@ -72,12 +72,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="index.js"></script>
   <script>
-    $.post('/api/auth/register', formData, function(data) {
-      $('#registerMessage').text('Registration successful');
-    }).fail(function(error) {
-      $('#registerMessage').text(error.responseJSON.message || 'Registration failed');
-    });
-
     $(document).ready(function() {
       // Login Form Submission
       $('#loginForm').submit(function(event) {
@@ -95,11 +89,11 @@
       $('#registerForm').submit(function(event) {
         event.preventDefault();
         const formData = $(this).serialize();
-        $.post('/register', formData, function(data) {
-          $('#registerMessage').text(data.message);
+        $.post('/api/auth/register', formData, function(data) {
+          $('#registerMessage').text('Registration successful');
           $('#registerForm')[0].reset();
         }).fail(function(error) {
-          $('#registerMessage').text(error.responseJSON.message);
+          $('#registerMessage').text(error.responseJSON.message || 'Registration failed');
         });
       });
 
