--- a/public/archive.html
+++ b/public/archive.html
@@ -71,6 +71,11 @@
             right: -250px;
             top: -100px;
         }
+        .home-button-leaderboard {
+            position: relative;
+            right:430px;
+            top:100px;
+        }
     </style>
 </head>
 
