--- a/public/main.html
+++ b/public/main.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <style>
+    .hub{
+      position: relative;
+      right:-275px;
+    }
+  </style>
   <div class="container">
     <div class="hub">
       <h1>Welcome!</h1>
@@ -28,7 +34,8 @@
         <div class="grid-item">
           <a href="socials.html"><i class="fas fa-user-friends"></i>  Socials</a>
         </div>
-        <div class="grid-item dropdown">
+        <!--<div class="grid-item dropdown">-->
+        <div class="grid-item">
           <button class="btn btn-link dropdown-toggle" type="button" id="optionsDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-cog chess-piece"></i>  Options
           </button>
