--- a/public/socials.html
+++ b/public/socials.html
@@ -33,9 +33,17 @@
         iframe {
             border: none;
         }
+        .home-button-leaderboard {
+            position: absolute;
+            right: 1200px;
+            top:50px;
+        }
     </style>
 </head>
 <body>
+    <ul class="navigation-links">
+        <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
+      </ul>
     <div class="container">
         <!-- Instagram Widget -->
         <div class="instagram-widget">
