--- a/public/club.html
+++ b/public/club.html
@@ -24,6 +24,10 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Darker box shadow */
       padding: 20px;
     }
+    .home-button-leaderboard {
+      position: relative;
+      right: 10px;
+    }
   </style>
 </head>
 <body>
