--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <style>
+    .home-button-leaderboard {
+      position: absolute;
+      right: 1085px;
+    }
+
+  </style>
   <div class="container">
     <h1 class = "leaderboard-h1">Leaderboard</h1>
     <ul class="navigation-links">
