--- a/public/club.html
+++ b/public/club.html
@@ -28,6 +28,20 @@
       position: relative;
       right: 10px;
     }
+    @media (max-width: 768px) {
+      .home-button-leaderboard {
+        position: relative;
+        right: 110px;
+      }
+    }
+    .mobile-message {
+      display: none;
+      text-align: center;
+      padding: 20px;
+      background-color: #f44336;
+      color: #fff;
+      font-size: 1.2rem;
+    }
   </style>
 </head>
 <body>
@@ -39,13 +53,32 @@
     <!-- PDF Viewer -->
     <iframe class="pdf-viewer" src="assets/Fall 2024 Club Schedule.pdf" title="Club Schedule"></iframe>
   </div>
+  
+  <!-- Mobile message container -->
+  <div class="mobile-message" id="mobileMessage">
+    This page is best viewed on a desktop. <br> Click <a href="assets/Fall 2024 Club Schedule.pdf" style="color: yellow;">here</a> to view the schedule directly.
+  </div>
+
   <script>
+    // Function to detect if the user is on a mobile device
+    function checkDeviceAndDisplayMessage() {
+      if (/Mobi|Android/i.test(navigator.userAgent)) {
+        // Hide the PDF viewer and container
+        document.querySelector('.container').style.display = 'none';
+        // Show the mobile message
+        document.getElementById('mobileMessage').style.display = 'block';
+      }
+    }
+
     // Fetch selected background image from localStorage
     const selectedBackground = localStorage.getItem('backgroundImage');
     // Set the selected background as the body background
     if (selectedBackground) {
       document.body.style.backgroundImage = `url(${selectedBackground})`;
     }
+
+    // Run the device check function when the DOM content is fully loaded
+    document.addEventListener('DOMContentLoaded', checkDeviceAndDisplayMessage);
   </script>
 </body>
 </html>
