--- a/public/archive.html
+++ b/public/archive.html
@@ -76,10 +76,25 @@
             right:430px;
             top:100px;
         }
+        #mobile-overlay {
+            display: none; /* Hide by default */
+            position: fixed; /* Overlay to cover entire screen */
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent gray background */
+            color: #ffffff; /* White text color */
+            text-align: center; /* Center text */
+            padding-top: 50%; /* Center the text vertically */
+            font-size: 1.5rem;
+            z-index: 1000; /* Ensure it is on top of everything */
+        }
     </style>
 </head>
 
 <body>
+    <div id="mobile-overlay">This page is not available on mobile devices. Please access it from a desktop or laptop.</div>
     <div class="container">
         <!-- Main Page Content -->
         <h1 class="leaderboard-h1">Archives</h1>
@@ -116,6 +131,18 @@
                 <li><a href="#" class="game-file-link" data-file="assets/pgns/Paul Morphy_vs_Duke of Brunswick and Count Isouard_1858.__.__.pgn">Paul Morphy(W) vs Duke of Brunswick and Count Isouard(B)</a></li>
             </ul>
         </div>
+        <script>
+            // Function to check if the user is on a mobile device
+            function checkIfMobile() {
+                var overlay = document.getElementById('mobile-overlay');
+                if (/Mobi|Android/i.test(navigator.userAgent)) {
+                    overlay.style.display = 'block'; // Show overlay on mobile devices
+                }
+            }
+        
+            // Run the check when the DOM content is fully loaded
+            document.addEventListener('DOMContentLoaded', checkIfMobile);
+        </script>        
         <!-- Include jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
         <!-- Include Chess.js -->
