--- a/public/profile.html
+++ b/public/profile.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
+  <style>
+    body, html{
+      background-color: black;
+    }
+  </style>
   <div class="container">
     <h1 class="leaderboard-h1">User Profile</h1>
     <ul class="navigation-links">
