--- a/public/profile.html
+++ b/public/profile.html
@@ -21,9 +21,9 @@
     </ul>
     <div class="profile-info"> 
       <h2 class = "h2-user">Welcome, <span id="username"></span>!</h2>
-      <p>Email: <span id="email"></span></p>
-      <p>Number of Games Played: <span id="numGamesPlayed"></span></p>
-      <p>Total Tournament Score: <span id="totalTournamentScore"></span></p>
+      <p style="color:white;">Email: <span id="email"></span></p>
+      <p style="color:white;">Number of Games Played: <span id="numGamesPlayed"></span></p>
+      <p style="color:white;">Total Tournament Score: <span id="totalTournamentScore"></span></p>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
