--- a/public/socials.html
+++ b/public/socials.html
@@ -43,6 +43,9 @@
                 position:relative;
                 top:-100px;
             }
+            html, body{
+                background-color: black;
+            }
         }
     </style>
 </head>
