--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -14,7 +14,13 @@
       position: absolute;
       right: 1085px;
     }
-
+    @media (max-width: 768px) {
+      .home-button-leaderboard {
+        position: absolute;
+        right: 140px;
+        top: -38px;
+      }
+    }
   </style>
   <div class="container">
     <h1 class = "leaderboard-h1">Leaderboard</h1>
