--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
       border-radius: 8px;
       background: #444; /* Dark background for forms */
     }
+    @media (max-width: 768px) {
+      /* put code here*/
+      
+    }
   </style>
 </head>
 <body>
