--- a/public/main.html
+++ b/public/main.html
@@ -20,19 +20,19 @@
       <h1>Welcome!</h1>
       <div class="grid-container">
         <div class="grid-item">
-          <a href="leaderboard.html"><i class="fas fa-trophy chess-piece"></i>  Leaderboard</a>
+          <a href="leaderboard.html"><i class="fas fa-trophy chess-piece"></i>‎ Leaderboard</a>
         </div>
         <div class="grid-item">
-          <a href="club.html"><i class="fas fa-chess-board chess-piece"></i>  Club Schedule</a>
+          <a href="club.html"><i class="fas fa-chess-board chess-piece"></i>‎ Schedule</a>
         </div>
         <div class="grid-item">
-          <a href="archive.html"><i class="fas fa-book chess-piece"></i>  Archives</a>
+          <a href="archive.html"><i class="fas fa-book chess-piece"></i>‎ ‎ Archives</a>
         </div>
         <div class="grid-item">
-          <a href="tournament.html"><i class="fas fa-trophy chess-piece"></i>   Tournaments</a>
+          <a href="tournament.html"><i class="fas fa-trophy chess-piece"></i>‎ Tournaments</a>
         </div>
         <div class="grid-item">
-          <a href="socials.html"><i class="fas fa-user-friends"></i>  Socials</a>
+          <a href="socials.html"><i class="fas fa-user-friends"></i>‎ Socials</a>
         </div>
         <!--<div class="grid-item dropdown">-->
         <div class="grid-item">
@@ -40,9 +40,9 @@
             <i class="fas fa-cog chess-piece"></i>  Options
           </button>
           <div class="dropdown-menu" aria-labelledby="optionsDropdown">
-            <a class="dropdown-item" href="profile.html"><i class="fas fa-user chess-piece"></i>  Profile</a>
-            <a class="dropdown-item" href="background.html"><i class="fas fa-paint-brush chess-piece"></i>  Change Background</a>
-            <button class="dropdown-item" id="logoutButton"><i class="fas fa-sign-out-alt chess-piece"></i>  Log Out</button>
+            <a class="dropdown-item" href="profile.html"><i class="fas fa-user chess-piece"></i>‎ Profile</a>
+            <a class="dropdown-item" href="background.html"><i class="fas fa-paint-brush chess-piece"></i>‎ Change Background</a>
+            <button class="dropdown-item" id="logoutButton"><i class="fas fa-sign-out-alt chess-piece"></i>‎ Log Out</button>
           </div>
         </div>
       </div>
