--- a/public/profile.html
+++ b/public/profile.html
@@ -13,6 +13,16 @@
     body, html{
       background-color: black;
     }
+    .profile-info{
+      position:absolute;
+      top:100px;
+    }
+    h2{
+      position:relative;
+      top:-10px;
+      right:-100px;
+      color: white;
+    }
   </style>
   <div class="container">
     <h1 class="leaderboard-h1">User Profile</h1>
